[workspace]
members = ["python"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Han-Sheng Wang <hanson2693@gmail.com>"]

[package]
name = "rustafx"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "rustafx"
path = "src/lib.rs"

[dependencies]
log = "^0.4"

[dev-dependencies]
approx = "0.5"