[workspace]
members = ["python"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Han-Sheng Wang <hanson2693@gmail.com>"]

[package]
name = "ruadio"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "ruadio"
path = "src/lib.rs"

[dependencies]
log = "^0.4"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "effects"
harness = false