[package]
name = "rustafx-python"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "rustafx"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
numpy = "^0.23.0"
pyo3 = { version = "^0.23.0", features = ["extension-module"] }
rustafx = { path = ".." }
